--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -46,7 +46,7 @@ body {
 
 
 body::-webkit-scrollbar {
-  position:absolute;
+  position: absolute;
   width: 5px;
   background: rgba(0, 0, 0, 0.945);
 
@@ -61,7 +61,7 @@ body::-webkit-scrollbar-thumb {
 //########### boton de contactar ###########//
 .float__wapp {
   display: flex;
-  position:absolute;
+  position: absolute;
   width: 50px;
   height: 50px;
   top: 50%;
@@ -77,6 +77,7 @@ body::-webkit-scrollbar-thumb {
     display: flex;
     justify-content: center;
     align-items: center;
+
     .botonfloat__wapp {
       position: absolute;
       z-index: 1;
@@ -86,7 +87,7 @@ body::-webkit-scrollbar-thumb {
       align-items: center;
       justify-content: center;
 
-      .rectangulo{
+      .rectangulo {
         position: absolute;
         z-index: -1;
         top: 100%;
@@ -101,7 +102,7 @@ body::-webkit-scrollbar-thumb {
       transform: scale(1.1);
     }
 
-    
+
     .cargando__wapp {
       opacity: 100;
       position: absolute;
@@ -179,6 +180,7 @@ p {
       display: flex;
       justify-content: center;
       align-items: center;
+      transform: scale(0.8) translateY(0px);
       z-index: 1000;
       margin-right: 9px;
 
@@ -1083,7 +1085,7 @@ p {
 @media (max-width: 1000px) {
   .float__wapp {
     display: flex;
-    position:absolute;
+    position: absolute;
     width: 50px;
     height: 50px;
     top: 50%;
@@ -1092,12 +1094,13 @@ p {
     z-index: 5;
     transform: scale(1);
     rotate: 0deg;
-  
-  
+
+
     a {
       display: flex;
       justify-content: center;
       align-items: center;
+
       .botonfloat__wapp {
         position: absolute;
         z-index: 1;
@@ -1106,8 +1109,8 @@ p {
         display: flex;
         align-items: center;
         justify-content: center;
-  
-        .rectangulo{
+
+        .rectangulo {
           position: absolute;
           z-index: -1;
           top: 100%;
@@ -1117,12 +1120,12 @@ p {
           background: #fbff00;
         }
       }
-  
+
       .botonfloat__wapp:hover {
         transform: scale(1.1);
       }
-  
-      
+
+
       .cargando__wapp {
         opacity: 100;
         position: absolute;
@@ -1133,7 +1136,7 @@ p {
         animation-iteration-count: infinite;
         animation-timing-function: linear;
       }
-  
+
       .backfloat__wapp {
         opacity: 0;
         position: absolute;
@@ -1164,7 +1167,7 @@ p {
       overflow: hidden;
 
       .cont__logo__nav {
-        transform: scale(0.8) ;
+        transform: scale(0.8);
         z-index: 1000;
         filter: invert(100%);
         align-items: center;
@@ -1971,12 +1974,14 @@ p {
       display: flex;
       justify-content: center;
       align-items: center;
+
       .botonfloat__wapp {
         margin-top: 0px;
         margin-left: 0px;
         position: absolute;
         z-index: 1;
-        img{
+
+        img {
           width: calc(1px + 15vw);
         }
       }
@@ -1985,17 +1990,17 @@ p {
         transform: scale(1.1);
       }
 
-          
-    .cargando__wapp {
-      opacity: 100;
-      position: absolute;
-      z-index: 9;
-      animation-name: backfloat;
-      animation-duration: 10s;
-      width: calc(1px + 35vw);
-      animation-iteration-count: infinite;
-      animation-timing-function: linear;
-    }
+
+      .cargando__wapp {
+        opacity: 100;
+        position: absolute;
+        z-index: 9;
+        animation-name: backfloat;
+        animation-duration: 10s;
+        width: calc(1px + 35vw);
+        animation-iteration-count: infinite;
+        animation-timing-function: linear;
+      }
 
 
       .backfloat__wapp {
@@ -2026,11 +2031,11 @@ p {
       flex-direction: column;
       justify-content: space-between;
       width: 100%;
-      position:relative;
+      position: relative;
       height: 100%;
 
       h2 {
-        
+
         text-align: center;
         padding: 10em 1em 1em 1em;
         color: #fff;
@@ -2060,7 +2065,7 @@ p {
         display: flex;
         justify-content: center;
         align-items: center;
-        position:absolute;
+        position: absolute;
         flex-direction: column-reverse;
 
         .caritapie {
@@ -2193,7 +2198,7 @@ p {
     transform: skew(0deg, 0deg) scaleY(1);
   }
 
-  @for $i from 1 through $total-lines + 1 {
+  @for $i from 1 through $total-lines+1 {
     &:nth-child(#{$i}) {
       left: $left-offset * $i;
     }
