--- a/style/sass.css
+++ b/style/sass.css
@@ -152,6 +152,7 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
+  transform: scale(0.8) translateY(0px);
   z-index: 1000;
   margin-right: 9px;
 }
@@ -2710,6 +2711,60 @@ p {
 }
 .body_proyecto .cont_banner img {
   width: 70vw;
+}
+.body_proyecto .cont_acercadelproyecto {
+  display: flex;
+  flex-direction: column;
+  margin-left: 5em;
+  margin-right: 5em;
+  height: 100vh;
+  padding-top: 5em;
+}
+.body_proyecto .cont_acercadelproyecto h3 {
+  flex-grow: 0;
+  font-family: MargoBeuys;
+  font-size: 50px;
+  font-weight: 900;
+  text-align: left;
+  color: #000;
+  margin-bottom: 1em;
+}
+.body_proyecto .cont_acercadelproyecto .cont_data_proyecto {
+  display: flex;
+  flex-direction: row;
+  gap: 7em;
+}
+.body_proyecto .cont_acercadelproyecto .cont_data_proyecto .data {
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  align-items: start;
+  justify-content: space-between;
+}
+.body_proyecto .cont_acercadelproyecto .cont_data_proyecto .data .cont_dato .titulo {
+  font-family: Gotham;
+  font-size: 15px;
+  line-height: 1.36;
+  letter-spacing: normal;
+  text-align: left;
+  color: #606060;
+}
+.body_proyecto .cont_acercadelproyecto .cont_data_proyecto .data .cont_dato .dato {
+  font-family: Gotham;
+  font-size: 20px;
+  font-weight: 500;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000;
+}
+.body_proyecto .cont_acercadelproyecto .cont_data_proyecto .data_proyecto {
+  width: 50%;
+  font-family: Gotham;
+  font-size: 20px;
+  font-weight: 400;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000;
 }
 
 .body__index {
