--- a/style/sass.css
+++ b/style/sass.css
@@ -2766,6 +2766,223 @@ p {
   text-align: left;
   color: #000;
 }
+.body_proyecto .cont_paletadecolores {
+  display: flex;
+  flex-direction: column;
+  margin-left: 5em;
+  margin-right: 5em;
+  height: 100vh;
+  padding-top: 5em;
+}
+.body_proyecto .cont_paletadecolores h3 {
+  flex-grow: 0;
+  font-family: MargoBeuys;
+  font-size: 50px;
+  font-weight: 900;
+  text-align: left;
+  color: #000;
+  margin-bottom: 1em;
+}
+.body_proyecto .cont_paletadecolores .cont_cont_colores {
+  display: flex;
+  flex-direction: row;
+  gap: 1em;
+  justify-content: center;
+  align-items: center;
+  gap: 25px;
+  padding: 2em 2em;
+  border-radius: 10px;
+  background-color: #efefef;
+}
+.body_proyecto .cont_paletadecolores .cont_cont_colores .color_uno {
+  width: 50%;
+  height: 285px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 10px;
+  padding: 10px 15px;
+  border-radius: 10px;
+  box-shadow: inset 0 0 12.7px 0 rgba(0, 0, 0, 0.25);
+  background-color: #fff;
+}
+.body_proyecto .cont_paletadecolores .cont_cont_colores .color_uno .titulo {
+  font-family: Gotham;
+  font-size: 15px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.36;
+  letter-spacing: normal;
+  text-align: left;
+  color: #303030;
+}
+.body_proyecto .cont_paletadecolores .cont_cont_colores .color_uno p {
+  width: 100%;
+  font-family: MargoBeuys;
+  font-size: 15px;
+  font-weight: 900;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.36;
+  letter-spacing: normal;
+  text-align: end;
+  color: #303030;
+}
+.body_proyecto .cont_paletadecolores .cont_cont_colores .color_segundario {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  height: 100%;
+  gap: 1em;
+}
+.body_proyecto .cont_paletadecolores .cont_cont_colores .color_segundario .color_dos {
+  height: 33.3%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 10px 15px;
+  border-radius: 10px;
+  box-shadow: inset 0 0 12.7px 0 rgba(0, 0, 0, 0.25);
+  background-color: #ff4d00;
+}
+.body_proyecto .cont_paletadecolores .cont_cont_colores .color_segundario .color_dos .titulo {
+  font-family: Gotham;
+  font-size: 15px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.36;
+  letter-spacing: normal;
+  text-align: left;
+  color: #ffffff;
+}
+.body_proyecto .cont_paletadecolores .cont_cont_colores .color_segundario .color_dos p {
+  width: 100%;
+  font-family: MargoBeuys;
+  font-size: 15px;
+  font-weight: 900;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.36;
+  letter-spacing: normal;
+  text-align: end;
+  color: #ffffff;
+}
+.body_proyecto .cont_paletadecolores .cont_cont_colores .color_segundario .color_tres {
+  height: 33.3%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 10px 15px;
+  border-radius: 10px;
+  box-shadow: inset 0 0 12.7px 0 rgba(0, 0, 0, 0.25);
+  background-color: #303030;
+}
+.body_proyecto .cont_paletadecolores .cont_cont_colores .color_segundario .color_tres .titulo {
+  font-family: Gotham;
+  font-size: 15px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.36;
+  letter-spacing: normal;
+  text-align: left;
+  color: #ffffff;
+}
+.body_proyecto .cont_paletadecolores .cont_cont_colores .color_segundario .color_tres p {
+  width: 100%;
+  font-family: MargoBeuys;
+  font-size: 15px;
+  font-weight: 900;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.36;
+  letter-spacing: normal;
+  text-align: end;
+  color: #ffffff;
+}
+.body_proyecto .cont_paletadecolores .cont_cont_colores .color_segundario .color_cuatro {
+  height: 33.3%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 10px 15px;
+  border-radius: 10px;
+  box-shadow: inset 0 0 12.7px 0 rgba(0, 0, 0, 0.25);
+  background-color: #000;
+}
+.body_proyecto .cont_paletadecolores .cont_cont_colores .color_segundario .color_cuatro .titulo {
+  font-family: Gotham;
+  font-size: 15px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.36;
+  letter-spacing: normal;
+  text-align: left;
+  color: #ffffff;
+}
+.body_proyecto .cont_paletadecolores .cont_cont_colores .color_segundario .color_cuatro p {
+  width: 100%;
+  font-family: MargoBeuys;
+  font-size: 15px;
+  font-weight: 900;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.36;
+  letter-spacing: normal;
+  text-align: end;
+  color: #ffffff;
+}
+.body_proyecto .cont_fuentes {
+  display: flex;
+  flex-direction: column;
+  margin-left: 5em;
+  margin-right: 5em;
+  height: 100vh;
+  padding-top: 5em;
+}
+.body_proyecto .cont_fuentes h3 {
+  flex-grow: 0;
+  font-family: MargoBeuys;
+  font-size: 50px;
+  font-weight: 900;
+  text-align: left;
+  color: #000;
+  margin-bottom: 1em;
+}
+.body_proyecto .cont_fuentes .fuente {
+  display: flex;
+  flex-direction: column;
+}
+.body_proyecto .cont_fuentes .fuente p {
+  margin: 0 132px 12px 0;
+  font-family: Gotham;
+  font-size: 20px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1;
+  letter-spacing: 0.6px;
+  text-align: start;
+  color: #000;
+}
+.body_proyecto .cont_fuentes .fuente h4 {
+  font-family: MonaSans-Wide;
+  font-size: 50px;
+  font-weight: 200;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1;
+  letter-spacing: 1.5px;
+  text-align: start;
+  color: #000;
+}
 
 .body__index {
   overflow-y: hidden;
