--- a/style/sass.css
+++ b/style/sass.css
@@ -2942,10 +2942,14 @@ p {
 .body_proyecto .cont_fuentes {
   display: flex;
   flex-direction: column;
+  justify-content: start;
+  align-items: start;
   margin-left: 5em;
   margin-right: 5em;
-  height: 100vh;
+  height: 100%;
   padding-top: 5em;
+  padding-bottom: 5em;
+  gap: 7em;
 }
 .body_proyecto .cont_fuentes h3 {
   flex-grow: 0;
@@ -2954,11 +2958,13 @@ p {
   font-weight: 900;
   text-align: left;
   color: #000;
-  margin-bottom: 1em;
+  margin-bottom: 0em;
 }
 .body_proyecto .cont_fuentes .fuente {
   display: flex;
   flex-direction: column;
+  align-items: start;
+  width: 100%;
 }
 .body_proyecto .cont_fuentes .fuente p {
   margin: 0 132px 12px 0;
@@ -2972,16 +2978,18 @@ p {
   text-align: start;
   color: #000;
 }
-.body_proyecto .cont_fuentes .fuente h4 {
-  font-family: MonaSans-Wide;
-  font-size: 50px;
-  font-weight: 200;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1;
-  letter-spacing: 1.5px;
-  text-align: start;
-  color: #000;
+.body_proyecto .cont_fuentes .fuente .img_font {
+  width: 50vh;
+}
+.body_proyecto .cont_fuentes .fuente .cont_fuentess {
+  width: 100%;
+  margin-top: 2em;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(min(70px, 100%), 1fr));
+  gap: 1em;
+}
+.body_proyecto .cont_fuentes .fuente .cont_fuentess .cont_font p {
+  width: 100%;
 }
 
 @media (max-width: 800px) {
