add ajustes de responsive de imagenes y grid en fuentes - add new section de cont_img

--- a/style/sass.css
+++ b/style/sass.css
@@ -2948,8 +2948,8 @@ p {
   margin-right: 5em;
   height: 100%;
   padding-top: 5em;
-  padding-bottom: 5em;
-  gap: 7em;
+  padding-bottom: 2em;
+  gap: 5em;
 }
 .body_proyecto .cont_fuentes h3 {
   flex-grow: 0;
@@ -2979,7 +2979,7 @@ p {
   color: #000;
 }
 .body_proyecto .cont_fuentes .fuente .img_font {
-  width: 50vh;
+  width: 30%;
 }
 .body_proyecto .cont_fuentes .fuente .cont_fuentess {
   width: 100%;
@@ -2988,8 +2988,47 @@ p {
   grid-template-columns: repeat(auto-fit, minmax(min(70px, 100%), 1fr));
   gap: 1em;
 }
-.body_proyecto .cont_fuentes .fuente .cont_fuentess .cont_font p {
+.body_proyecto .cont_fuentes .fuente .cont_fuentess .cont_font {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 0.5em;
+}
+.body_proyecto .cont_fuentes .fuente .cont_fuentess .cont_font img {
+  width: 30%;
+}
+.body_proyecto .cont_fuentes .fuente .cont_fuentess .cont_font .nombre_fuente {
+  display: inline;
   width: 100%;
+  font-family: Gotham;
+  font-size: 20px;
+  font-weight: 300;
+  line-height: 1;
+  color: #000;
+}
+.body_proyecto .cont_img {
+  margin-top: 10em;
+  margin-bottom: 10em;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 0.5em;
+  grid-row-gap: 0.5em;
+}
+.body_proyecto .cont_img .cont_img_uno {
+  height: 100vh;
+  grid-area: 1/1/2/2;
+  background-color: #d9d9d9;
+}
+.body_proyecto .cont_img .cont_img_dos {
+  height: 100vh;
+  grid-area: 1/2/2/3;
+  background-color: #d9d9d9;
+}
+.body_proyecto .cont_img .cont_img_tres {
+  grid-area: 2/1/3/3;
+  background-color: #d9d9d9;
 }
 
 @media (max-width: 800px) {
