ajuste responsive proyecto jannier

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -972,7 +972,7 @@ p {
 
       strong {
         color: rgb(255, 230, 0);
-        font-family: "Bodoni Moda", serif;
+        font-family: "Playfair Display", serif;
         font-size: calc(1px + 6vw);
         font-style: italic;
         font-weight: 700;
@@ -2048,7 +2048,7 @@ p {
 
         strong {
           color: rgb(255, 230, 0);
-          font-family: "Bodoni Moda", serif;
+          font-family: "Playfair Display", serif;
           font-size: calc(1px + 7vw);
           font-style: italic;
           font-weight: 700;
