--- a/sass/_proyecto.scss
+++ b/sass/_proyecto.scss
@@ -412,30 +412,42 @@
     }
 
     .cont_img {
+        display: flex;
+        flex-direction: column;
         margin-top: 10em;
         margin-bottom: 10em;
-        width: 100%;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        grid-column-gap: 0.5em;
-        grid-row-gap: 0.5em;
+        gap: 0.7em;
 
-        .cont_img_uno {
-            height: 100vh;
-            grid-area: 1 / 1 / 2 / 2;
-            background-color: #d9d9d9;
+        .cont_img_grup {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            gap: 1em;
+
+            .cont_img_uno {
+                width: 50%;
+
+                img {
+                    width: 100%;
+                    object-fit: cover;
+                }
+            }
+
+            .cont_img_dos {
+                width: 50%;
+
+                img {
+                    width: 100%;
+                    object-fit: cover;
+                }
+            }
         }
-
-        .cont_img_dos {
-            height: 100vh;
-            grid-area: 1 / 2 / 2 / 3;
-            background-color: #d9d9d9;
-        }
-
-        .cont_img_tres {
-            grid-area: 2 / 1 / 3 / 3;
-            background-color: #d9d9d9;
+        .cont_img_tres{
+            width: 100%;
+            img{
+                width: 100%;
+            }
         }
     }
 }
@@ -862,28 +874,42 @@
         }
 
         .cont_img {
-            margin-top: 10em;
-            margin-bottom: 10em;
-            width: 100%;
             display: flex;
             flex-direction: column;
-
-            .cont_img_uno {
-                width: 100%;
-                height: 100vh;
-                background-color: #d9d9d9;
+            margin-top: 10em;
+            margin-bottom: 10em;
+            gap: 0.5em;
+    
+            .cont_img_grup {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                gap: 1em;
+    
+                .cont_img_uno {
+                    width: 100%;
+    
+                    img {
+                        width: 100%;
+                        object-fit: cover;
+                    }
+                }
+    
+                .cont_img_dos {
+                    width: 100%;
+    
+                    img {
+                        width: 100%;
+                        object-fit: cover;
+                    }
+                }
             }
-
-            .cont_img_dos {
+            .cont_img_tres{
                 width: 100%;
-                height: 100vh;
-                background-color: #d9d9d9;
-            }
-
-            .cont_img_tres {
-                width: 100%;
-                height: 100vh;
-                background-color: #d9d9d9;
+                img{
+                    width: 100%;
+                }
             }
         }
     }
