--- a/style/sass.css
+++ b/style/sass.css
@@ -3006,28 +3006,40 @@ p {
   color: #000;
 }
 .body_proyecto .cont_img {
+  display: flex;
+  flex-direction: column;
   margin-top: 10em;
   margin-bottom: 10em;
+  gap: 0.7em;
+}
+.body_proyecto .cont_img .cont_img_grup {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 1em;
+}
+.body_proyecto .cont_img .cont_img_grup .cont_img_uno {
+  width: 50%;
+}
+.body_proyecto .cont_img .cont_img_grup .cont_img_uno img {
   width: 100%;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  grid-column-gap: 0.5em;
-  grid-row-gap: 0.5em;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
-.body_proyecto .cont_img .cont_img_uno {
-  height: 100vh;
-  grid-area: 1/1/2/2;
-  background-color: #d9d9d9;
+.body_proyecto .cont_img .cont_img_grup .cont_img_dos {
+  width: 50%;
 }
-.body_proyecto .cont_img .cont_img_dos {
-  height: 100vh;
-  grid-area: 1/2/2/3;
-  background-color: #d9d9d9;
+.body_proyecto .cont_img .cont_img_grup .cont_img_dos img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .body_proyecto .cont_img .cont_img_tres {
-  grid-area: 2/1/3/3;
-  background-color: #d9d9d9;
+  width: 100%;
+}
+.body_proyecto .cont_img .cont_img_tres img {
+  width: 100%;
 }
 
 @media (max-width: 800px) {
@@ -3406,26 +3418,40 @@ p {
     color: #000;
   }
   .body_proyecto .cont_img {
-    margin-top: 10em;
-    margin-bottom: 10em;
-    width: 100%;
     display: flex;
     flex-direction: column;
+    margin-top: 10em;
+    margin-bottom: 10em;
+    gap: 0.5em;
   }
-  .body_proyecto .cont_img .cont_img_uno {
-    width: 100%;
-    height: 100vh;
-    background-color: #d9d9d9;
+  .body_proyecto .cont_img .cont_img_grup {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
   }
-  .body_proyecto .cont_img .cont_img_dos {
+  .body_proyecto .cont_img .cont_img_grup .cont_img_uno {
     width: 100%;
-    height: 100vh;
-    background-color: #d9d9d9;
+  }
+  .body_proyecto .cont_img .cont_img_grup .cont_img_uno img {
+    width: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .body_proyecto .cont_img .cont_img_grup .cont_img_dos {
+    width: 100%;
+  }
+  .body_proyecto .cont_img .cont_img_grup .cont_img_dos img {
+    width: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
   .body_proyecto .cont_img .cont_img_tres {
     width: 100%;
-    height: 100vh;
-    background-color: #d9d9d9;
+  }
+  .body_proyecto .cont_img .cont_img_tres img {
+    width: 100%;
   }
 }
 .body__index {
