add video proyecto jannier

--- a/sass/_proyecto.scss
+++ b/sass/_proyecto.scss
@@ -78,7 +78,7 @@
         align-items: center;
         justify-content: center;
 
-        img {
+        .video_pro_jannier {
             width: 70vw;
         }
     }
@@ -536,7 +536,8 @@
             align-items: center;
             justify-content: center;
 
-            img {
+
+            .video_pro_jannier {
                 width: 70vw;
             }
         }
