--- a/style/sass.css
+++ b/style/sass.css
@@ -3890,16 +3890,18 @@ p {
   display: flex;
   flex-direction: column;
   margin: 0em 5em 5em 5em;
+  gap: 3em;
 }
 .body__index .mis_servicios .cont_lista_mis_servicios .cont_item_mis_servicios {
   display: flex;
-  padding: 15px 0px;
+  padding: 0px 0px;
   justify-content: space-between;
   align-items: flex-start;
   align-self: stretch;
   border-bottom: 0.5px solid #b1b1b1;
   overflow-x: hidden;
   width: 100%;
+  overflow-y: hidden;
 }
 .body__index .mis_servicios .cont_lista_mis_servicios .cont_item_mis_servicios h4 {
   color: #000000;
@@ -3948,6 +3950,7 @@ p {
   /* 15.05px */
 }
 .body__index .mis_servicios .cont_lista_mis_servicios .cont_item_mis_servicios .cont_slider_banderas {
+  pointer-events: none;
   display: flex;
   position: absolute;
   align-items: center;
@@ -3975,6 +3978,7 @@ p {
   width: 30vw;
 }
 .body__index .mis_servicios .cont_lista_mis_servicios .cont_item_mis_servicios:hover {
+  overflow-y: hidden;
   border-bottom: 2px solid #000000;
 }
 .body__index .mis_servicios .cont_lista_mis_servicios .cont_item_mis_servicios:hover h4 {
@@ -4014,13 +4018,15 @@ p {
   visibility: hidden;
 }
 .body__index .mis_servicios .cont_lista_mis_servicios .cont_item_mis_servicios:hover .cont_slider_banderas {
+  pointer-events: visible;
   visibility: visible;
 }
 .body__index .mis_servicios .cont_lista_mis_servicios .cont_item_mis_servicios:hover .cont_slider_banderas .sslider_uno {
+  display: flex;
   overflow-x: hidden;
   opacity: 1;
   bottom: 0vh;
-  height: 100%;
+  height: 0%;
   width: 100%;
   background: #fff503;
 }
