add video a proyecto jannier

--- a/sass/_proyecto.scss
+++ b/sass/_proyecto.scss
@@ -438,7 +438,7 @@
             .cont_img_dos {
                 width: 50%;
 
-                img {
+                video {
                     width: 100%;
                     object-fit: cover;
                 }
@@ -901,7 +901,7 @@
                 .cont_img_dos {
                     width: 100%;
     
-                    img {
+                    video {
                         width: 100%;
                         object-fit: cover;
                     }
