--- a/style/sass.css
+++ b/style/sass.css
@@ -2760,7 +2760,7 @@ p {
 .body_proyecto .cont_acercadelproyecto .cont_data_proyecto .data_proyecto {
   width: 50%;
   font-family: Gotham;
-  font-size: 20px;
+  font-size: clamp(10px, 4vw, 20px);
   font-weight: 400;
   letter-spacing: normal;
   text-align: left;
@@ -3146,9 +3146,12 @@ p {
     width: 100%;
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
-    gap: 1em;
+    align-items: start;
+    justify-content: start;
+    gap: none;
+  }
+  .body_proyecto .cont_acercadelproyecto .cont_data_proyecto .data .cont_dato {
+    width: 100%;
   }
   .body_proyecto .cont_acercadelproyecto .cont_data_proyecto .data .cont_dato .titulo {
     width: 100%;
@@ -3170,7 +3173,7 @@ p {
   .body_proyecto .cont_acercadelproyecto .cont_data_proyecto .data_proyecto {
     width: 100%;
     font-family: Gotham;
-    font-size: 20px;
+    font-size: clamp(10px, 4vw, 32px);
     font-weight: 400;
     letter-spacing: normal;
     text-align: left;
